# Smart_Factory

smart_factory_ws/: .gitignore  Env2.data  Env2.pgm  Env2.posegraph  Env2.yaml  frames_2025-05-10_17.17.06.gv  map_1744355432.yaml  sample_map.data  sample_map.pgm  sample_map.posegraph  sample_map.yaml  samplemap_!.data  samplemap_1.pgm  samplemap_1.yaml  turtlebot3_housemap.data  turtlebot3_housemap.pgm  turtlebot3_housemap.posegraph  turtlebot3_housemap.yaml
smart_factory_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
smart_factory_ws/install/smart_factory/share/smart_factory/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
smart_factory_ws/install/smart_factory/share/smart_factory/config/: mapper_params_online_async.yaml  move_to_object.yaml  nav2_params.yaml  slam_config.rviz  waffle.yaml
smart_factory_ws/install/smart_factory/share/smart_factory/launch/: bringup_launch.py  multi_nav.launch.py  multi_robot_navigation.launch.py  multi_spawn_turtlebot3.launch.py  multirobot.launch.py  navigation2.launch.py  online_async_launch.py  perception.launch.py  perception_moverobot.launch.py  robot_state_publisher.launch.py  simple_robot.launch.py  simple_world.launch.py  spawn_turtlebot3.launch.py  warehouse_world.launch.py
smart_factory_ws/install/smart_factory/share/smart_factory/model/: tmp1.sdf  tmp2.sdf
smart_factory_ws/install/smart_factory/share/smart_factory/world/: smartfactory.world
smart_factory_ws/log/: latest_build  latest_list
smart_factory_ws/src/smart_factory/: CMakeLists.txt  setup.py
(+10500 files in other folders)
